--- a/Assignment7_V2/Assignment7_V2.csproj
+++ b/Assignment7_V2/Assignment7_V2.csproj
@@ -1,317 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E9783401-18E5-4973-9CB5-008E6E528E1B}</ProjectGuid>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Assignment7_V2</RootNamespace>
-    <AssemblyName>Assignment7_V2</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Deterministic>true</Deterministic>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <LangVersion>7.3</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <UseWindowsForms>true</UseWindowsForms>
+    <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AnimationEvents.cs" />
-    <Compile Include="GameEngine.cs" />
-    <Compile Include="GameMenu.cs" />
-    <Compile Include="GateCoords.cs" />
-    <Compile Include="HelperMethods.cs" />
-    <Compile Include="Interactions.cs" />
-    <Compile Include="InteractionType.cs" />
-    <Compile Include="Items.cs" />
-    <Compile Include="Maps\Maps.cs" />
-    <Compile Include="Maps\MapObjectives.cs" />
-    <Compile Include="Maps\GameMaps.cs" />
-    <Compile Include="GameResources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>GameResources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="InventoryImages.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>InventoryImages.resx</DependentUpon>
-    </Compile>
-    <Compile Include="MapImages.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MapImages.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Maps\ObjectiveData.cs" />
-    <Compile Include="Maps\Objectives.cs" />
-    <Compile Include="ObjectiveNames.cs" />
-    <Compile Include="Player.cs" />
-    <Compile Include="PlayerAction.cs" />
-    <Compile Include="PlayerFacing.cs" />
-    <Compile Include="PlayerInventory.cs" />
-    <Compile Include="QuestItems.cs" />
-    <Compile Include="TheGame.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="TheGame.Designer.cs">
-      <DependentUpon>TheGame.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Walkthrough.cs" />
-    <EmbeddedResource Include="GameResources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>GameResources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Include="InventoryImages.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>InventoryImages.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MapImages.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>MapImages.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="TheGame.resx">
-      <DependentUpon>TheGame.cs</DependentUpon>
-    </EmbeddedResource>
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\EvilElf.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\bowl.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Cat_FacingRight.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\EvilElf1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\exclaimation.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\gameMenu.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\gameMenuOpen.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Hero1_Down1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Hero1_Down2.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Hero1_FacingDown.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Hero1_FacingLeft.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Hero1_FacingRight.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Hero1_FacingUp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Hero1_Left1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Hero1_Left2.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Hero1_Portrait1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Hero1_Portrait2.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Hero1_Portrait3.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Hero1_Right1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Hero1_Right2.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Hero1_Up1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Hero1_Up2.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\menuBrowse.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\menuBrowseActive.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\NPC1_FacingDown.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\NPC1_FacingUp.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\NPC2.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\NPC3.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\tony.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\burger_color.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\burger_color1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\burger_gray.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\cat_color.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\cat_gray.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\fishingrod_color.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\fishingrod_gray.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\goatmeat_color.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\goatmeat_gray.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\greenmushroom_color.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\greenmushroom_gray.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\knighthelmet_color.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\knighthelmet_gray.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\pickaxe_color.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\pickaxe_gray.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\raindeerdung_color.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\raindeerdung_gray.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\raindeernose_color.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\raindeernose_gray.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\redmushroom_color.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\redmushroom_gray.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\rubberduck_color.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\rubberduck_gray.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\rustykey_color.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\rustykey_gray.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\shard_color.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\shard_gray.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\snakeskin_color.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\snakeskin_gray.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\yellowmushroom_color.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\yellowmushroom_gray.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\map1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\map2.png" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
